# icalint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: rules.md
examples/: README.md  clean.ics  floating-time.ics  outlook-export.ics  rrule-traps.ics
scripts/: smoke.sh
src/icalint/: __init__.py  __main__.py  cli.py  engine.py  model.py  parser.py  registry.py  report.py  rrule.py  rules_interop.py  rules_recurrence.py  rules_structure.py  rules_timezone.py  tznames.py  values.py
tests/: conftest.py  test_cli.py  test_parser.py  test_report.py  test_rrule.py  test_rules_interop.py  test_rules_recurrence.py  test_rules_structure.py  test_rules_timezone.py  test_values.py
