[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icalint"
version = "0.1.0"
description = "A linter for iCalendar (.ics) files: floating times, missing VTIMEZONEs, RRULE traps, and interop breakers - before the invite goes out."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["icalendar", "ics", "linter", "calendar", "rfc5545", "rrule", "timezone", "interoperability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
icalint = "icalint.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/icalint"
Repository = "https://github.com/JaydenCJ/icalint"
Issues = "https://github.com/JaydenCJ/icalint/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
